--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -20,14 +20,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="project" id="71M-M2-Fer" customClass="ProjectsTableViewCell" customModule="Zedit" customModuleProvider="target">
-                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="42.666667938232422"/>
+                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="43"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="71M-M2-Fer" id="Kpv-LC-8tS">
-                                    <rect key="frame" x="0.0" y="0.0" width="353" height="42.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHv-zq-cQ6">
-                                            <rect key="frame" x="20" y="11.000000000000002" width="313" height="20.666666666666671"/>
+                                            <rect key="frame" x="20" y="11" width="313" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -635,63 +635,52 @@
                                         <buttonConfiguration key="configuration" style="tinted" title="Button"/>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BaX-ZL-ANz">
-                                        <rect key="frame" x="0.0" y="115.00000000000003" width="377" height="364.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="114.99999999999997" width="377" height="336.33333333333326"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="260" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="T8R-su-Xg8">
-                                        <rect key="frame" x="0.0" y="489.66666666666674" width="377" height="154"/>
+                                        <rect key="frame" x="0.0" y="461.33333333333337" width="377" height="326.33333333333337"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="sYa-Qc-jaJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="377" height="32"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="377" height="20.333333333333332"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Number of Clips :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qfS-is-e58">
-                                                        <rect key="frame" x="0.0" y="0.0" width="160" height="32"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="160" id="jtK-Yc-wMI"/>
-                                                        </constraints>
+                                                        <rect key="frame" x="0.0" y="0.0" width="137.66666666666666" height="20.333333333333332"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0IT-FH-6qf">
-                                                        <rect key="frame" x="191.66666666666666" y="0.0" width="60" height="32"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="60" id="O7k-23-eXJ"/>
-                                                        </constraints>
+                                                        <rect key="frame" x="189.66666666666666" y="0.0" width="41.333333333333343" height="20.333333333333332"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="o3G-Fs-cWE">
-                                                        <rect key="frame" x="283" y="0.0" width="94" height="32"/>
+                                                        <rect key="frame" x="283" y="0.0" width="94" height="20.333333333333332"/>
                                                     </stepper>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="k2A-iU-k4n">
-                                                <rect key="frame" x="0.0" y="41.999999999999943" width="377" height="32"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="k2A-iU-k4n">
+                                                <rect key="frame" x="0.0" y="30.333333333333371" width="377" height="216"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Maximum Duration Of clips :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTk-r4-vLv">
-                                                        <rect key="frame" x="0.0" y="0.0" width="228" height="32"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="228" id="2Gv-6g-en8"/>
-                                                        </constraints>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Minimum Duration Of Clips :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTk-r4-vLv">
+                                                        <rect key="frame" x="0.0" y="0.0" width="121" height="216"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXb-wi-30F">
-                                                        <rect key="frame" x="235" y="0.0" width="41" height="32"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="kT4-6o-LyE">
-                                                        <rect key="frame" x="283" y="0.0" width="94" height="32"/>
-                                                    </stepper>
+                                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tJg-6F-PgY">
+                                                        <rect key="frame" x="128" y="0.0" width="121" height="216"/>
+                                                    </pickerView>
+                                                    <pickerView contentMode="scaleToFill" id="S0S-9n-ukO">
+                                                        <rect key="frame" x="256" y="0.0" width="121" height="216"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    </pickerView>
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Select clip Focus" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBg-aF-wSk">
-                                                <rect key="frame" x="0.0" y="83.999999999999943" width="377" height="30"/>
+                                                <rect key="frame" x="0.0" y="256.33333333333331" width="377" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="nPY-M8-yJT"/>
                                                 </constraints>
@@ -700,7 +689,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="UfE-ve-TXr">
-                                                <rect key="frame" x="0.0" y="123.99999999999994" width="377" height="31"/>
+                                                <rect key="frame" x="0.0" y="296.33333333333331" width="377" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="OSg-gx-pHd"/>
                                                 </constraints>
@@ -711,9 +700,12 @@
                                                 </segments>
                                             </segmentedControl>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="k2A-iU-k4n" firstAttribute="top" secondItem="T8R-su-Xg8" secondAttribute="top" constant="30.333333333333371" id="00h-ac-paE"/>
+                                        </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2Z-f7-IhC">
-                                        <rect key="frame" x="0.0" y="653.66666666666663" width="377" height="178.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="797.66666666666663" width="377" height="34.333333333333371"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Generate Clips"/>
                                         <connections>
@@ -736,11 +728,11 @@
                         <outlet property="GenerateButton" destination="M2Z-f7-IhC" id="NGT-gY-H7M"/>
                         <outlet property="clippingFocusSegmentedControl" destination="UfE-ve-TXr" id="DSQ-l4-hAV"/>
                         <outlet property="generateButton" destination="M2Z-f7-IhC" id="oMZ-rH-gvk"/>
-                        <outlet property="maximumDurationOfClipsStepper" destination="kT4-6o-LyE" id="cWC-NH-MMI"/>
-                        <outlet property="maximumDurationOfClipsStepperLabel" destination="eXb-wi-30F" id="QlF-3f-h0k"/>
+                        <outlet property="minutesPicker" destination="tJg-6F-PgY" id="s4N-uj-vTw"/>
                         <outlet property="nameLabel" destination="dwe-iN-pkd" id="N8o-hl-WCI"/>
                         <outlet property="numberOfClipsStepper" destination="o3G-Fs-cWE" id="oBF-Qj-fyj"/>
                         <outlet property="numberOfClipsStepperLabel" destination="0IT-FH-6qf" id="859-N2-k34"/>
+                        <outlet property="secondsPicker" destination="S0S-9n-ukO" id="wqS-gb-w4P"/>
                         <outlet property="videoSelectorButton" destination="wx4-9k-HGf" id="p5j-ad-a9X"/>
                         <outlet property="videoSelectorView" destination="BaX-ZL-ANz" id="0Vk-AN-6if"/>
                         <segue destination="deM-vT-UcJ" kind="unwind" identifier="cancel" unwindAction="myUnwindActionWithUnwindSegue:" id="PkC-O2-Ef2"/>
@@ -877,16 +869,16 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
