--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -155,18 +155,14 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="Bej-KG-fH2">
                                 <rect key="frame" x="0.0" y="92.333333333333314" width="393" height="749.66666666666674"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hev-bh-iPS">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="592.33333333333337"/>
-                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
-                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Project Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBA-Vm-RWJ">
-                                        <rect key="frame" x="0.0" y="603.33333333333326" width="393" height="28.666666666666629"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="28.666666666666668"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Project Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dgd-S4-TpP">
-                                        <rect key="frame" x="0.0" y="643" width="393" height="30"/>
+                                        <rect key="frame" x="0.0" y="39.666666666666671" width="393" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Ggs-vz-WWz"/>
                                         </constraints>
@@ -174,29 +170,35 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-qH-RvL">
-                                        <rect key="frame" x="0.0" y="684" width="393" height="20.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="80.666666666666671" width="393" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="systemRedColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sw3-ff-XIC">
+                                        <rect key="frame" x="0.0" y="112.00000000000001" width="393" height="34.333333333333329"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" image="video.fill" catalog="system" title="Select Video"/>
+                                        <connections>
+                                            <action selector="selectVideoButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="nNC-uG-yR6"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hev-bh-iPS">
+                                        <rect key="frame" x="0.0" y="157.33333333333331" width="393" height="547"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kO5-TQ-z95">
                                         <rect key="frame" x="0.0" y="715.33333333333326" width="393" height="34.333333333333371"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Create Project"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Create Project">
+                                            <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
+                                        </buttonConfiguration>
                                         <connections>
                                             <segue destination="hYy-BM-7Ke" kind="unwind" identifier="Create" unwindAction="unwindToMyProjects:" id="2Ma-bW-sW4"/>
                                         </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sw3-ff-XIC">
-                                <rect key="frame" x="0.0" y="49" width="393" height="34.333333333333336"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Select Video"/>
-                                <connections>
-                                    <action selector="selectVideoButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="nNC-uG-yR6"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1UG-VX-ipz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -205,11 +207,8 @@
                             <constraint firstItem="Lka-yF-Rkw" firstAttribute="leading" secondItem="ceu-HX-njB" secondAttribute="leadingMargin" id="AVH-oi-s85"/>
                             <constraint firstItem="Bej-KG-fH2" firstAttribute="leading" secondItem="1UG-VX-ipz" secondAttribute="leading" id="EHc-Hf-ZwR"/>
                             <constraint firstItem="Bej-KG-fH2" firstAttribute="trailing" secondItem="1UG-VX-ipz" secondAttribute="trailing" id="abE-pT-mbo"/>
-                            <constraint firstItem="Sw3-ff-XIC" firstAttribute="top" secondItem="Lka-yF-Rkw" secondAttribute="bottom" constant="8" symbolic="YES" id="gjX-sr-Als"/>
-                            <constraint firstItem="Sw3-ff-XIC" firstAttribute="trailing" secondItem="Bej-KG-fH2" secondAttribute="trailing" id="gq7-cZ-zbl"/>
                             <constraint firstItem="Lka-yF-Rkw" firstAttribute="top" secondItem="1UG-VX-ipz" secondAttribute="top" id="hV2-Hu-Ayj"/>
                             <constraint firstItem="Bej-KG-fH2" firstAttribute="top" secondItem="Lka-yF-Rkw" secondAttribute="bottom" constant="51.333333333333314" id="lbI-Qq-H7w"/>
-                            <constraint firstItem="Sw3-ff-XIC" firstAttribute="leading" secondItem="Bej-KG-fH2" secondAttribute="leading" id="w2h-h4-OBN"/>
                             <constraint firstItem="1UG-VX-ipz" firstAttribute="bottom" secondItem="Bej-KG-fH2" secondAttribute="bottom" id="w9g-OV-xjS"/>
                         </constraints>
                     </view>
@@ -881,6 +880,7 @@
         <image name="camera.filters" catalog="system" width="128" height="119"/>
         <image name="diamond.circle" catalog="system" width="128" height="123"/>
         <image name="plus.app" catalog="system" width="128" height="114"/>
+        <image name="video.fill" catalog="system" width="128" height="81"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
